--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,12 @@ spring:
       hibernate:
 #        show_sql: true
         format_sql: true
-
+  data:
+    web:
+      pageable:
+        default-page-size: 10
+        one-indexed-parameters: true
 logging.level:
     org.hibernate.SQL: debug
 #    org.hibernate.type: trace
+
